Cart content were too long if item name was very large.Fixed

--- a/css/styles.less
+++ b/css/styles.less
@@ -1203,6 +1203,12 @@ div.ui-dialog .ui-dialog-title {
         margin-bottom: 10px;
     }
 
+    // chechkout
+    td.cart-content-description {
+        min-width: 20em;
+        white-space: normal !important;
+    }
+
 
 }
 /*=====  End of Media Queries  ======*/
